# api/api.yml
@@ -261,20 +261,11 @@ components:
           type: string
           x-oapi-codegen-extra-tags:
             validate: "required,max=100,min=6"
-        register_as:
-          type: integer
-          format: int8
-          description: |-
-            - 1 = merchant
-            - 2 = customer
-          x-oapi-codegen-extra-tags:
-            validate: "required,oneof=1 2"
       required:
         - email
         - full_name
         - re_password
         - password
-        - register_as
     V1GetProfile200Response:
       type: object
       properties:
@@ -292,12 +283,6 @@ components:
           nullable: true
         email:
           type: string
-        register_as:
-          type: integer
-          format: int8
-          description: |-
-            - 1=merchant / seller
-            - 2=customer
         is_email_verified:
           type: boolean
       required:
@@ -306,7 +291,6 @@ components:
         - image
         - background_image
         - email
-        - register_as
         - is_email_verified
     FileUploadRequest:
       type: object
