# internal/model/users.go
@@ -10,7 +10,6 @@ type User struct {
 	Password        string     `db:"password"`
 	CreatedAt       time.Time  `db:"created_at"`
 	IsEmailVerified bool       `db:"is_email_verified"`
-	RegisterAs      int8       `db:"register_as"`
 	UpdatedAt       time.Time  `db:"updated_at"`
 	DeletedAt       *time.Time `db:"deleted_at"`
 	TraceParent     *string    `db:"trace_parent"`
